Support overloaded method names in state machine proxies.